--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dev = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-cov>=7.0.0",
+    "respx>=0.22.0",
     "ruff>=0.14.4",
     "types-pyyaml>=6.0.12.20250915",
     "types-ujson>=5.10.0.20250822",
