--- a/config/kumacub.toml
+++ b/config/kumacub.toml
@@ -7,29 +7,20 @@ structured = true  # Whether to use structured (JSON) logging
 
 # Checks configuration
 [[checks]]
-name = "kernel version"
-type = "nagios"
-command = "/home/steve/scm/kumacub/kernel_version.sh"
-interval = 86400
-
-[[checks]]
 name = "disk usage"
-type = "nagios"
-command = "/usr/bin/df"
-args = ["-h"]
-interval = 60
+executor = { command = "echo", args = ["-n", "OK"] }
+publisher = { url = "https://uptime-kuma.jibson.com", push_token = "V0LPCbmhJ1?" }
 
-[[checks]]
-name = "my env"
-type = "nagios"
-command = "/usr/bin/env"
-env = { YOUR_MOM="goes to college", YOUR_DAD="goes to work" }
-interval = 300
-
-[[checks]]
-name = "busted"
-type = "nagios"
-command = "/bin/sh"
-args = ["-c", "false"]
-env = { YOUR_MOM="goes to college", YOUR_DAD="goes to work" }
-interval = 300
+#[[checks]]
+#name = "my env"
+#executor = { name = "process", command = "/usr/bin/env", env = { YOUR_MOM = "goes to college", YOUR_DAD = "goes to work" } }
+#parser = { name = "nagios" }
+#publisher = { name = "uptime_kuma", url = "http://your-uptime-kuma-instance.com", push_token = "your-push-token-here" }
+#schedule = { interval = 300 }
+#
+#[[checks]]
+#name = "busted"
+#executor = { name = "process", command = "/bin/sh", args = ["-c", "false"], env = { YOUR_MOM = "goes to college", YOUR_DAD = "goes to work" } }
+#parser = { name = "nagios" }
+#publisher = { name = "uptime_kuma", url = "http://your-uptime-kuma-instance.com", push_token = "your-push-token-here" }
+#schedule = { interval = 300 }
