--- a/config/kumacub.toml
+++ b/config/kumacub.toml
@@ -7,10 +7,19 @@ structured = true  # Whether to use structured (JSON) logging
 
 # Checks configuration
 [[checks]]
+name = "kernel version"
+executor.command = "/home/steve/scm/kumacub/kernel_version.sh"
+publisher.url = "https://uptime-kuma.jibson.com"
+publisher.push_token = "eGsV3npw5qjzKpwLEVx6xOmerMcIUTof"
+schedule.interval = 23
+
+[[checks]]
 name = "disk usage"
-executor = { command = "echo", args = ["-n", "OK - Test is running"] }
-publisher = { url = "https://uptime-kuma.jibson.com", push_token = "eGsV3npw5qjzKpwLEVx6xOmerMcIUTof" }
-schedule = { interval = 30 }
+executor.command = "echo"
+executor.args = ["-n", "OK - Test is running"]
+publisher.url = "https://uptime-kuma.jibson.com"
+publisher.push_token = "eGsV3npw5qjzKpwLEVx6xOmerMcIUTof"
+schedule.interval = 29
 
 #[[checks]]
 #name = "my env"
