--- a/src/kumacub/data/kumacub.service
+++ b/src/kumacub/data/kumacub.service
@@ -17,7 +17,7 @@ ProtectKernelModules=true
 RestrictRealtime=true
 
 # Start the service
-ExecStart="/usr/bin/kumacub daemon"
+ExecStart=/usr/bin/kumacub daemon
 ExecReload=/bin/kill -HUP $MAINPID
 
 # Restart policy
