--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dev = [
 [project]
 authors = [{name = "Steve Jibson", email = "steve@jibson.com"}]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 4 - Beta",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
@@ -36,11 +36,11 @@ dependencies = [
 ]
 keywords = ["nagios", "Uptime Kuma"]
 license = "GPL-3.0-only"
-icense-files = ["LICENSE"]
+license-files = ["LICENSE"]
 name = "kumacub"
 readme = "README.md"
 requires-python = ">=3.11"
-version = "0.4.0"
+version = "0.5.0"
 
 [project.scripts]
 kumacub = "kumacub.entrypoints.cli:main"
